# persona-factory

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: enrichment.py  global_locales.py  pool.py  single.py
src/persona_factory/: __init__.py  cli.py  config.py  exceptions.py  factory.py  keylinks.py  presets.py  rng.py
src/persona_factory/data/: __init__.py
src/persona_factory/data/lexicons/: communication.json  lifestyle.json  narrative.json  values.json
src/persona_factory/data/locales/ar_SA/: data.json
src/persona_factory/data/locales/de_DE/: data.json
src/persona_factory/data/locales/en_GB/: data.json
src/persona_factory/data/locales/en_US/: data.json
src/persona_factory/data/locales/es_ES/: data.json
src/persona_factory/data/locales/fr_FR/: data.json
src/persona_factory/data/locales/hi_IN/: data.json
src/persona_factory/data/locales/ja_JP/: data.json
src/persona_factory/data/locales/nb_NO/: data.json
src/persona_factory/data/locales/pt_BR/: data.json
src/persona_factory/data/locales/ru_RU/: data.json
src/persona_factory/data/locales/zh_CN/: data.json
src/persona_factory/data/occupations/: taxonomy.json
src/persona_factory/data/personality/: enneagram.json  mbti.json  traits.json
src/persona_factory/enrichment/: __init__.py  claude.py  llm.py
src/persona_factory/generators/: __init__.py  _helpers.py  base.py  beliefs.py  communication.py  contact.py  documents.py  identity.py  lifestyle.py  location.py  narrative.py  personality.py  physical.py  social.py  socioeconomic.py  values.py
src/persona_factory/models/: __init__.py  enums.py  persona.py
src/persona_factory/pools/: __init__.py  population.py
src/persona_factory/rendering/: __init__.py  card.py  serialize.py  system_prompt.py
tests/: conftest.py  test_cli.py  test_config_presets.py  test_data.py  test_enrichment.py  test_generators.py  test_identity.py  test_keylinks.py  test_pools.py  test_rendering.py  test_rng.py
