[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "persona-factory"
version = "0.1.1"
description = "Generate richly-attributed, coherent fake personas (and pools of them) for LLM roleplay, simulated users, and social simulation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Yunzhe Wang" }]
keywords = [
    "persona",
    "llm",
    "agent",
    "roleplay",
    "simulation",
    "synthetic-data",
    "fake-data",
    "testing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "anthropic>=0.40",
    "openai>=1.0",
    "polars>=1.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/wangyz1999/persona-factory"
Repository = "https://github.com/wangyz1999/persona-factory"
Issues = "https://github.com/wangyz1999/persona-factory/issues"
Documentation = "https://github.com/wangyz1999/persona-factory#readme"

[project.scripts]
persona-factory = "persona_factory.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "build>=1.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/persona_factory"]

[tool.hatch.build.targets.sdist]
include = ["src/persona_factory", "README.md", "LICENSE", "CHANGELOG.md"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W", "N", "C4", "SIM"]
# E501: line length handled by formatter; SIM102: nested guards read clearer here
ignore = ["E501", "SIM102"]

[tool.mypy]
python_version = "3.10"
packages = ["persona_factory"]
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["persona_factory"]
branch = true
